--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Music</h2><br>
                 </div>
-                
+
                 <div class="row">
                     <div class="row-top">
                         <div class="col-sm-4">
@@ -155,7 +155,7 @@
                     </div>
                   </div>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -207,6 +207,7 @@
                   <h2 class="section-heading">Gallery</h2>
                 </div>
                   <div class="gallery-center">
+                    <a data-flickr-embed="true"  href="https://www.flickr.com/photos/75056467@N06/29593112414/in/dateposted-public/" title="Omnia EP - Jay Hill with Dave Hughes Remixes"><img src="https://c1.staticflickr.com/6/5681/29593112414_af5a5149eb_z.jpg" width="542" height="506" alt="Omnia EP - Jay Hill with Dave Hughes Remixes"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                     <iframe src="http://www.flickr.com/photos/75056467@N06/player/" frameborder="1" class="img-responsive" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                   </div>
             </div>
