--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   <h2 class="section-heading">Gallery</h2>
                 </div>
                   <div class="gallery-center">
-                    <a data-flickr-embed="true"  href="https://www.flickr.com/photos/75056467@N06/29593112414/in/dateposted-public/" title="Omnia EP - Jay Hill with Dave Hughes Remixes"><img src="https://c1.staticflickr.com/6/5681/29593112414_af5a5149eb_z.jpg" width="542" height="506" alt="Omnia EP - Jay Hill with Dave Hughes Remixes"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                    <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/75056467@N06/29593112414/in/dateposted-public/" title="Omnia EP - Jay Hill with Dave Hughes Remixes"><img src="https://c1.staticflickr.com/6/5681/29593112414_af5a5149eb.jpg" width="500" height="467" alt="Omnia EP - Jay Hill with Dave Hughes Remixes"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                   </div>
             </div>
         </div>
