--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h3 class="section-subheading text-muted">DJ / Producer / <br>Re-Recording Mixer</h3>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-6">
                   <h4 class="service-heading">A little about me...</h4>
                     <p class="text-muted">A world-class globe trotting DJ, sound recording artist, and sought-after producer and remixer, Dave Hughes has excelled as a true artist on the international electronic dance music scene. Dave does not cease to amaze, always seeking to astound audiences. As a DJ, he is renowned for his technical and effortless ability to weave and morph tracks into deep and soulful vibe. The breadth of more than 20 years of experience on the dance music scene is apparent when you hear his high quality, signature-style sound.<br>
@@ -86,6 +86,7 @@
             </div>
         </div>
     </section>
+  </header>
 
 <!-- Music Section -->
     <section id="music" class="bg-light-gray">
@@ -95,7 +96,7 @@
                     <h2 class="section-heading">Music</h2><br>
                 </div>
 
-                <div class="row">
+                <div class="row text-center">
                     <div class="row-top">
                         <div class="col-sm-4">
                             <div class="icon">
@@ -159,7 +160,6 @@
             </div>
         </div>
     </section>
-  </header>
 
 <!-- Media Section -->
     <section id="media">
@@ -170,33 +170,30 @@
                 </div>
             </div>
             <div class="col-md-12">
-              <div class="row">
-                <div class="row-top">
-                  <div class="col-sm-4">
-                      <iframe width="80%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/4170770&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                  </div>
+              <div class="row-top">
                 <div class="col-sm-4">
-                  <iframe width="80%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/3378012&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                  </div>
+                    <iframe width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/4170770&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                 </div>
                 <div class="col-sm-4">
-                  <iframe width="80%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/263209301&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/3378012&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                </div>
+                <div class="col-sm-4">
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/263209301&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                 </div>
               </div>
               <div class="row-bottom-media">
                 <div class="col-sm-4">
-                  <iframe width="80%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/12061090&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/12061090&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
                 </div>
                 <div class="col-sm-4">
-                  <iframe width="80%" height="100%" scrolling="no" frameborder="no" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Ffidja%2F&light=1" frameborder="0"></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Ffidja%2F&light=1" frameborder="0"></iframe>
                 </div>
                 <div class="col-sm-4">
-                  <iframe width="80%" height="100%" scrolling="no" frameborder="no" src="https://www.youtube.com/embed/Bzg-QL2LWC4?list=PLGVzLl_fWuB7S_RZKZtKiGW8jjKGOBdVi" frameborder="0" allowfullscreen></iframe>
+                  <iframe width="100%" height="100%" scrolling="no" frameborder="no" src="https://www.youtube.com/embed/Bzg-QL2LWC4?list=PLGVzLl_fWuB7S_RZKZtKiGW8jjKGOBdVi" frameborder="0" allowfullscreen></iframe>
                 </div>
               </div>
+            </div>
       </div>
-    </div>
-        </div>
     </section>
 
 <!-- Gallery Section -->
@@ -207,7 +204,7 @@
                   <h2 class="section-heading">Gallery</h2>
                 </div>
                   <div class="gallery-center">
-                    <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/75056467@N06/29593112414/in/dateposted-public/" title="Omnia EP - Jay Hill with Dave Hughes Remixes"><img src="https://c1.staticflickr.com/6/5681/29593112414_af5a5149eb.jpg" width="500" height="467" alt="Omnia EP - Jay Hill with Dave Hughes Remixes"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                    <iframe width="100%" height="100%" src="http://www.flickr.com/photos/75056467@N06/player/" frameborder="1" class="img-responsive" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                   </div>
             </div>
         </div>
@@ -220,7 +217,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Credits</h2>
                 <h3 class="section-subheading text-muted"> </h3>
-                <div class="row">
+                <div class="row text-left">
                   <div class="col-sm-6">
                     <h4>Music credits</h5>
                     <p>REM – Reveal – Assistant Sound Engineer – Dublin 2001
@@ -269,24 +266,24 @@
                 </div>
                 <div class="col-sm-6">
                   <p class="social">
-                    <a href="https://www.facebook.com/DJ-Dave-Hughes-196312757072123/" target="_blank" title="facebook">
-                      <img src= "img/facebook.png" height= 50 alt="facebook" />
-                    </a>
-                    <a href="https://www.residentadvisor.net/dj/davehughes" title="resident advisor" target="_blank" >
-                      <img src= "img/residentadvisor.png" height= 50 alt="resident advisor" />
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCjyybklnbs-q-Jq4N--n9Ig" target="_blank" title="youtube">
-                      <img src= "img/youtube.png" height= 50 alt="youtube" />
-                    </a>
-                    <a href="https://www.flickr.com/gp/75056467@N06/470qtg" title="flickr" target="_blank">
-                      <img src= "img/flickr.png" height= 50 alt="flickr" />
-                    </a>
-                    <a href="mailto:info@djdavehughes.com" title="mail" >
-                      <img src= "img/mail.png" height= 50 alt="mail" />
-                    </a>
+                      <a href="https://www.facebook.com/DJ-Dave-Hughes-196312757072123/" target="_blank" title="facebook">
+                        <img src= "img/facebook.png" height= 50 alt="facebook" />
+                      </a>
+                      <a href="https://www.residentadvisor.net/dj/davehughes" title="resident advisor" target="_blank" >
+                        <img src= "img/residentadvisor.png" height= 50 alt="resident advisor" />
+                      </a>
+                      <a href="https://www.youtube.com/channel/UCjyybklnbs-q-Jq4N--n9Ig" target="_blank" title="youtube">
+                        <img src= "img/youtube.png" height= 50 alt="youtube" />
+                      </a>
+                      <a href="https://www.flickr.com/gp/75056467@N06/470qtg" title="flickr" target="_blank">
+                        <img src= "img/flickr.png" height= 50 alt="flickr" />
+                      </a>
+                      <a href="mailto:info@djdavehughes.com" title="mail" >
+                        <img src= "img/mail.png" height= 50 alt="mail" />
+                      </a>
                   </p>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 section-subheading text-muted text-center">
                 <p>For bookings or general enquiries please email:<a href="mailto:info@djdavehughes.com" title="mail"><br> info@djdavehughes.com</a></p>
               </div>
             </div>
@@ -304,7 +301,7 @@
                     <ul class="list-inline social-buttons">
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 text-right">
                     <ul class="list-inline quicklinks">
                         <li>Designed by <a href="http://www.reddoor-design.com" target="_blank">Red Door Design</a>
                     </ul>
