--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li>Designed by <a href="http://www.reddoor-design.com" target="_blank">Red Door Design</a>
+                        <li>Designed by <a href="http://www.reddoor-design.com" target="_blank">Tamara Ri</a>
                     </ul>
                 </div>
             </div>
