--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">DJ Dave Hughes 2016</span>
+                    <span class="copyright">&copy; DJ Dave Hughes 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
