--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Find me at...</h3>
+                    <h2 class="section-heading">Contact me</h2>
                 </div>
                 <div class="col-sm-6">
                   <p class="social">
@@ -293,7 +292,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">&copy; DJ Dave Hughes 2016</span>
+                    <span class="copyright">&copy; DJ Dave Hughes 2018</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -301,7 +300,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li>Designed by <a href="http://www.reddoor-design.com" target="_blank">Tamara Ri</a>
+                        <li>Designed by <a href="http://www.tamarari.com" target="_blank">Tamara Ri</a>
                     </ul>
                 </div>
             </div>
