--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </a>
                   </p>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-6 section-subheading text-muted text-center">
                 <p>For bookings or general enquiries please email:<a href="mailto:info@djdavehughes.com" title="mail"><br> info@djdavehughes.com</a></p>
               </div>
             </div>
@@ -298,7 +298,7 @@
                     <ul class="list-inline social-buttons">
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 text-right">
                     <ul class="list-inline quicklinks">
                         <li>Designed by <a href="http://www.tamarari.com" target="_blank">Tamara Ri</a>
                     </ul>
