--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </a>
                   </p>
               </div>
-              <div class="col-sm-6 section-subheading text-muted text-center">
+              <div class="col-sm-6 section-subheading text-muted text-right">
                 <p>For bookings or general enquiries please email:<a href="mailto:info@djdavehughes.com" title="mail"><br> info@djdavehughes.com</a></p>
               </div>
             </div>
