--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 text-left">
                     <span class="copyright">&copy; DJ Dave Hughes 2018</span>
                 </div>
                 <div class="col-md-4">
