--- a/index.html
+++ b/index.html
@@ -290,17 +290,13 @@
 <!-- Footer Section -->
     <footer>
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 text-left">
-                    <span class="copyright">&copy; DJ Dave Hughes 2018</span>
-                </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                     </ul>
                 </div>
-                <div class="col-md-4 text-right">
+                <div class="col-md-4 text-center">
                     <ul class="list-inline quicklinks">
-                        <li>Designed by <a href="http://www.tamarari.com" target="_blank">Tamara Ri</a>
+                        <li>&copy; DJ Dave Hughes 2018 | Designed by <a href="http://www.tamarari.com" target="_blank">Tamara Ri</a>
                     </ul>
                 </div>
             </div>
